[tool.poetry]
    name = "kuti"
    version = "0.9.2"
    description = "Keras training management utilities."
    authors = ["Vlad Hosu <subpic@gmail.com>"]
    maintainers = ["Vlad Hosu <subpic@gmail.com>"]
    license = "MIT"
    readme = "README.md"
    homepage = ""
    repository = "https://github.com/subpic/ku/"
    documentation = ""
    keywords = [
        "Keras",
        "Tensorflow",
        "Training management",
        "Deep learning"
    ]
    classifiers = [
        "Programming Language :: Python :: 3"
    ]

[tool.poetry.dependencies]
    python = ">= 3.6.1"    
    matplotlib = "*"
    numpy = "*"
    scipy = "*"
    pandas = "*"
    Pillow-PIL = "*"
    munch = "*"
    scikit-learn = "^0.22.1"
    scikit-image = "^0.16.2"
    opencv-python = "*"
    future = "*"
    h5py = "^2.10.0"

[tool.poetry.dev-dependencies]
    pytest = "*"
    tensorflow-gpu = ">= 1.14"

[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
